--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="icon" href="/public/images/cupIcon.ico">
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap"
       rel="stylesheet"
